# goose_discord_lambda

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  logging.conf  main.py  pyproject.toml  tox.ini
.github/workflow/: push_ecr.yml
.github/workflows/: push_ecr.yml
goose_discord/: schemas.py  settings.py
goose_discord_webhook/: schemas.py  settings.py
handlers/: __init__.py  command.py  fun.py  main.py  quotes.py  roll.py  sentiment.py
